state_encoding/yuan_alg/build/log.txt
g++ -std=c++11 -Wall -g -c ../src/Path.cpp
../src/Path.cpp: In static member function ‘static bool Path::equalTo(const Path*, const Path*)’:
../src/Path.cpp:13:34: error: no matching function for call to ‘std::list<int>::erase(std::list<int>::const_iterator) const’
   p1->path.erase(p1->path.begin());
                                  ^
../src/Path.cpp:13:34: note: candidates are:
In file included from /usr/include/c++/4.8/list:64:0,
                 from ../src/Path.h:4,
                 from ../src/Path.cpp:1:
/usr/include/c++/4.8/bits/list.tcc:108:5: note: std::list<_Tp, _Alloc>::iterator std::list<_Tp, _Alloc>::erase(std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
     list<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/list.tcc:108:5: note:   no known conversion for argument 1 from ‘std::list<int>::const_iterator {aka std::_List_const_iterator<int>}’ to ‘std::list<int>::iterator {aka std::_List_iterator<int>}’
In file included from /usr/include/c++/4.8/list:63:0,
                 from ../src/Path.h:4,
                 from ../src/Path.cpp:1:
/usr/include/c++/4.8/bits/stl_list.h:1193:7: note: std::list<_Tp, _Alloc>::iterator std::list<_Tp, _Alloc>::erase(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       erase(iterator __first, iterator __last)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1193:7: note:   candidate expects 2 arguments, 1 provided
../src/Path.cpp:14:34: error: no matching function for call to ‘std::list<int>::erase(std::list<int>::const_iterator) const’
   p2->path.erase(p2->path.begin());
                                  ^
../src/Path.cpp:14:34: note: candidates are:
In file included from /usr/include/c++/4.8/list:64:0,
                 from ../src/Path.h:4,
                 from ../src/Path.cpp:1:
/usr/include/c++/4.8/bits/list.tcc:108:5: note: std::list<_Tp, _Alloc>::iterator std::list<_Tp, _Alloc>::erase(std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
     list<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/list.tcc:108:5: note:   no known conversion for argument 1 from ‘std::list<int>::const_iterator {aka std::_List_const_iterator<int>}’ to ‘std::list<int>::iterator {aka std::_List_iterator<int>}’
In file included from /usr/include/c++/4.8/list:63:0,
                 from ../src/Path.h:4,
                 from ../src/Path.cpp:1:
/usr/include/c++/4.8/bits/stl_list.h:1193:7: note: std::list<_Tp, _Alloc>::iterator std::list<_Tp, _Alloc>::erase(std::list<_Tp, _Alloc>::iterator, std::list<_Tp, _Alloc>::iterator) [with _Tp = int; _Alloc = std::allocator<int>; std::list<_Tp, _Alloc>::iterator = std::_List_iterator<int>]
       erase(iterator __first, iterator __last)
       ^
/usr/include/c++/4.8/bits/stl_list.h:1193:7: note:   candidate expects 2 arguments, 1 provided
make: *** [Path.o] Error 1
